added tools catalog view
